--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
-  <link href="/phonepe.css" rel="stylesheet" type="text/css">
+  <link href="style.css" rel="stylesheet" type="text/css">
   <link rel="icon" type="logo" href="icon-48x48.png">
   <title>My 2nd Website</title>
 
@@ -34,7 +34,7 @@
    <section class="t-1">
      <div class="image">
        <div class="overlay"></div>
-       <img src="/hp-banner1.png">
+       <img src="hp-banner1.png">
        <div class="img-txt">
          <a class="txt-btn" href="#">Get the App</a> 
        </div>
@@ -76,8 +76,8 @@
          <div class="box-txt">
            <h1>Your money stays safe.</h1>
            <p>Pohnepe protects your money with the best-in-class security systems that help minimize frauds.</p>
-           <img src="/pciiss.png">
-           <img src="/ISO.png">
+           <img src="pciiss.png">
+           <img src="ISO.png">
          </div>
          </div>
        </div>
@@ -186,7 +186,7 @@
        <div class="container">
          <div class="row">
           <div class="footer-logo">
-            <img src="/icon-logo_footer.svg">
+            <img src="icon-logo_footer.svg">
           </div>
           <div class="footer-link">
             <h3>General</h3>
@@ -213,11 +213,11 @@
           </div>
           <div class="footer-link">
             <h3>Cerfication</h3>
-            <img src="/sisa-805af93261222e0a1c1322a9d84a3ccb.png">
+            <img src="sisa-805af93261222e0a1c1322a9d84a3ccb.png">
             </div>
             <div class="footer-link">
               <h3>See All Apps</h3>
-              <img src="/DOWNLOAD NOWW.svg">
+              <img src="DOWNLOAD NOWW.svg">
               <div class="social-icon">
                 <i class="fa fa-linkedin-square" aria-hidden="true"></i>
                 <i class="fa fa-twitter-square" aria-hidden="true"></i>
