--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
        <div class="container">
          <div class="row">
           <div class="footer-logo">
-            <img src="icon-logo_footer.svg">
+            <img src="download.svg">
           </div>
           <div class="footer-link">
             <h3>General</h3>
